Dodanie trzeciego akapitu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>Strona testowa</p>
-    <<p>Drugi akapit</p>
+    <p>Drugi akapit</p>
+    <p>trzeci akapit</p>
 </body>
 </html>
